function to get a random number

--- a/searchpage.html
+++ b/searchpage.html
@@ -18,7 +18,8 @@
         <p id="HP">HP</p> 
         <p id="weight">weight</p> 
         <p id="height">height</p> 
-        <p id="type">type</p> 
+        <p id="types">types</p> 
+        <p id=""></p>
         
     </div>
 
