--- a/searchpage.html
+++ b/searchpage.html
@@ -9,22 +9,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon2</title>
 </head>
+
 <body>
-    <button onclick="loadpk()">Search Pokémon</button>
-
-    <div id="container">
-        <h3 id="nome">Pokemon Name</h3>
-        <img id="pic">
-
-    </div>  
-
-        <div id="whitebox">
-            <p id="HP">HP</p>
-            <p id="weight">weight</p> 
-            <p id="height">height</p> 
-            <p id="types">types</p> 
-
+<div class="container">
+    <div class="box">
+        <div class="box__close">
+            <p>&#215;</p>
         </div>
-
+        <div class="box__content">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/female/25.png" alt="pkmImg" class="box__img">
+            <p class="text--title text--center text--uppercase color--neutral-700">
+                Pikachu
+            </p>
+            <div class="box__infos">
+                <div class="box__info">
+                    <p class="text--label text--center text--uppercase color--neutral-700 mb-1">
+                        HP
+                    </p>
+                    <p class="text--title text--center color--neutral-700">
+                        45/45
+                    </p>
+                </div>
+                <div class="box__infos-divider"></div>
+                <div class="box__info">
+                    <p class="text--label text--center text--uppercase color--neutral-700 mb-1">
+                        Altura
+                    </p>
+                    <p class="text--title text--center color--neutral-700">
+                        0.7m
+                    </p>
+                </div>
+                <div class="box__infos-divider"></div>
+                <div class="box__info">
+                    <p class="text--label text--center text--uppercase color--neutral-700 mb-1">
+                        Peso
+                    </p>
+                    <p class="text--title text--center color--neutral-700">
+                        6.9 Kg
+                    </p>
+                </div>
+            </div>
+            <div class="box__subtitle">
+                <p class="text--subtitle text--uppercase color--neutral-700">
+                    Tipo
+                </p>
+            </div>
+            <div class="box__types">
+                <div class="pkm-type pkm-type--grass mr-2">
+                    <p>
+                        Planta
+                    </p>
+                </div>
+                <div class="pkm-type pkm-type--poison">
+                    <p>
+                        Veneno
+                    </p>
+                </div>
+            </div>
+            <div class="box__subtitle">
+                <p class="text--subtitle text--uppercase color--neutral-700">
+                    Habilidades
+                </p>
+            </div>
+            <div class="box__skills">
+                <p class="text--label text--center text--uppercase color--neutral-700">
+                    Overgrow, Tackle
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
