--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <img src="Imagens/Logo 1.png" alt="Logo 1.png ">
-        <button onclick="buttonFunction()">START</button>
+        <a href="searchpage.html" onclick="buttonFunction()">START</a>
     </div>
 
 </body>
