create capture pokemon button

--- a/searchpage.html
+++ b/searchpage.html
@@ -12,17 +12,18 @@
 <body>
     <button onclick="loadpk()">Search Pokémon</button>
 
-    <div id="container">
-        <h3 id="nome">Pokemon Name</h3>
-        <img id="pic">
+    <div class="container">
+        <h3 class="nome">Pokemon Name</h3>
+        <img class="pic">
 
     </div>  
 
-        <div id="whitebox">
-            <p id="HP">HP</p>
-            <p id="weight">weight</p> 
-            <p id="height">height</p> 
-            <p id="types">types</p>
+        <div class="whitebox">
+            <p class="HP">HP</p>
+            <p class="weight">weight</p> 
+            <p class="height">height</p> 
+            <p class="types">types</p>
+            <img src="Imagens/Line.png" alt="Line.png">
 
         </div>
 
