page style improvements

--- a/searchpage.html
+++ b/searchpage.html
@@ -23,7 +23,7 @@
             <p class="weight">weight</p> 
             <p class="height">height</p> 
             <p class="types">types</p>
-            <img src="Imagens/Line.png" alt="Line.png">
+            <img src="Imagens/pokeball (1).png " alt="pokeball">
 
         </div>
 
