CSS and JavaScript improvements

--- a/searchpage.html
+++ b/searchpage.html
@@ -20,9 +20,9 @@
         <div class="whitebox">
             <h3 class="nome">Pokemon Name</h3>
             <p class="HP">HP</p>
-            <p class="weight">weight</p> 
-            <p class="height">height</p> 
-            <p class="types">types</p>
+            <p class="weight">WEIGHT</p> 
+            <p class="height">HEIGHT</p> 
+            <p class="types">TYPES</p>
             <img src="Imagens/pokeball (1).png" alt="pokeball" onclick="save()">
             
         </div>
