html and css restructure

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <div class="container">
         <img src="Imagens/Logo 1.png" alt="Logo 1.png ">
-        <a href="searchpage.html" onclick="buttonFunction()">START</a>
+        <a href="searchpage.html">START</a>  
     </div>
-
+    
 </body>
 
 </html>
